@@ -459,3 +459,10 @@
 2016-12-07 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 5:3:2.
 	* Incremented the package version to 0.11.7.
+2016-12-13 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SyGpioEvent' class in 'src/sy/sygpio_server.cpp' and
+	'src/sy/sygpio_server.h'.
+	* Added a 'SyGpioServer::gpioReceived()' signal in
+	'src/sy/sygpio_server.cpp' and 'src/sy/sygpio_server.h'.
+	* Refactored gpio_test(1) to use the 'SyGpioServer::gpioReceived()'
+	signal in 'tests/gpio_test.cpp' and 'tests/gpio_test.h'.
